--- a/notebooks/1.US_Birth/us_pop_data1.ipynb
+++ b/notebooks/1.US_Birth/us_pop_data1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -20,8 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['']\n",
-      "[[''], [''], [''], [''], [''], ['<!DOCTYPE html>'], ['<html lang=\"en\">'], ['  <head>'], ['    <meta charset=\"utf-8\">'], ['']]\n"
+      "['year', 'month', 'date_of_month', 'day_of_week', 'births']\n",
+      "[['1994', '1', '1', '6', '8096'], ['1994', '1', '2', '7', '7772'], ['1994', '1', '3', '1', '10142'], ['1994', '1', '4', '2', '11248'], ['1994', '1', '5', '3', '11053'], ['1994', '1', '6', '4', '11406'], ['1994', '1', '7', '5', '11251'], ['1994', '1', '8', '6', '8653'], ['1994', '1', '9', '7', '7910'], ['1994', '1', '10', '1', '10498']]\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
